feat: update documentation

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:meta-tx": "hardhat test test/test-meta-tx-new.js",
     "compile": "hardhat compile",
     "clean": "hardhat clean",
-    "deploy:gmp": "hardhat run scripts/deploy-gmp.js --network polygon",
+    "deploy:metatx": "hardhat run scripts/deploy-metatx.js --network u2u-nebulas-testnet",
+    "deploy:gmp": "hardhat run scripts/deploy-gmp.js --network u2u-nebulas-testnet",
     "whitelist-relayer": "hardhat run scripts/whitelist-relayer.js",
     "start:gmp-relayer": "cd relayer && npm run start:gmp",
     "extract-build": "node scripts/extract-build-info.js",
