--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "test:meta-tx": "hardhat test test/test-meta-tx-new.js",
     "compile": "hardhat compile",
     "clean": "hardhat clean",
-    "deploy:metatx": "hardhat run scripts/deploy-metatx.js --network u2u-nebulas-testnet",
-    "deploy:gmp": "hardhat run scripts/deploy-gmp.js --network u2u-nebulas-testnet",
+    "deploy:metatx": "hardhat run scripts/deploy-metatx.js --network u2u-solaris-mainnet",
+    "deploy:gmp": "hardhat run scripts/deploy-gmp.js --network u2u-solaris-mainnet",
     "whitelist-relayer": "hardhat run scripts/whitelist-relayer.js",
     "start:gmp-relayer": "cd relayer && npm run start:gmp",
     "extract-build": "node scripts/extract-build-info.js",
@@ -32,6 +32,7 @@
   "dependencies": {
     "@chainlink/contracts": "^1.3.0",
     "@openzeppelin/contracts": "^4.8.3",
+    "keccak256": "^1.0.6",
     "marked": "^16.1.1",
     "puppeteer": "^24.15.0"
   }
